--- a/mobile.css
+++ b/mobile.css
@@ -342,7 +342,7 @@
     }
 
     .project-title {
-        font-size: 0.95rem;
+        font-size: 0.85rem;
         line-height: 1.2;
         margin: 0;
         text-align: left;
@@ -486,7 +486,8 @@
     }
     
     .project-title, .tool-name {
-        font-size: 1.1rem;
+        font-size: 0.8rem;
+        line-height: 1.15;
     }
     
     .tag {
@@ -629,7 +630,7 @@
     }
 
     .project-title {
-        font-size: 0.8rem;
+        font-size: 0.75rem;
         line-height: 1.1;
     }
 
