--- a/mobile.css
+++ b/mobile.css
@@ -164,16 +164,16 @@
         order: 1;
         display: flex;
         flex-direction: column;
-        padding-right: 30px;
-        margin-bottom: 1rem;
+        padding-right: 0;
+        margin-bottom: 0;
     }
     
     .project-title, .tool-name {
-        font-size: 0.65rem !important;
+        font-size: 0.75rem !important;
         line-height: 1.3;
         word-break: break-word;
         overflow-wrap: break-word;
-        text-align: center;
+        text-align: left;
         font-weight: 500;
     }
     
@@ -342,7 +342,7 @@
     }
 
     .project-title {
-        font-size: 0.65rem !important;
+        font-size: 0.75rem !important;
         line-height: 1.2 !important;
         margin: 0 !important;
         text-align: left !important;
@@ -486,7 +486,7 @@
     }
     
     .project-title, .tool-name {
-        font-size: 0.55rem !important;
+        font-size: 0.7rem !important;
         line-height: 1.15 !important;
     }
     
@@ -535,7 +535,7 @@
     }
 
     .project-title {
-        font-size: 0.55rem;
+        font-size: 0.75rem;
         line-height: 1.15;
     }
 
@@ -630,7 +630,7 @@
     }
 
     .project-title, .tool-name {
-        font-size: 0.45rem !important;
+        font-size: 0.65rem !important;
         line-height: 1.1 !important;
     }
 
